tests/ui/pattern/rest-pat-semantic-disallowed.stderr
error: `..` patterns are not allowed here
  --> $DIR/rest-pat-semantic-disallowed.rs:8:13
   |
LL |     () => { .. }
   |             ^^
...
LL |     let mk_pat!();
   |         --------- in this macro invocation
   |
   = note: only allowed in tuple, tuple struct, and slice patterns
   = note: this error originates in the macro `mk_pat` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `..` patterns are not allowed here
  --> $DIR/rest-pat-semantic-disallowed.rs:16:9
   |
LL |     let ..;
   |         ^^
   |
   = note: only allowed in tuple, tuple struct, and slice patterns

error: `..` patterns are not allowed here
  --> $DIR/rest-pat-semantic-disallowed.rs:20:13
   |
LL |         1 | .. => {}
   |             ^^
   |
   = note: only allowed in tuple, tuple struct, and slice patterns

error: `..` patterns are not allowed here
  --> $DIR/rest-pat-semantic-disallowed.rs:24:10
   |
LL |     let &..;
   |          ^^
   |
   = note: only allowed in tuple, tuple struct, and slice patterns

error: `..` patterns are not allowed here
  --> $DIR/rest-pat-semantic-disallowed.rs:25:14
   |
LL |     let &mut ..;
   |              ^^
   |
   = note: only allowed in tuple, tuple struct, and slice patterns

error: `..` patterns are not allowed here
  --> $DIR/rest-pat-semantic-disallowed.rs:28:13
   |
LL |     let x @ ..;
   |             ^^
   |
   = note: only allowed in tuple, tuple struct, and slice patterns

error: `..` patterns are not allowed here
  --> $DIR/rest-pat-semantic-disallowed.rs:30:17
   |
LL |     let ref x @ ..;
   |                 ^^
   |
   = note: only allowed in tuple, tuple struct, and slice patterns

error: `..` patterns are not allowed here
  --> $DIR/rest-pat-semantic-disallowed.rs:31:21
   |
LL |     let ref mut x @ ..;
   |                     ^^
   |
   = note: only allowed in tuple, tuple struct, and slice patterns

error: `..` can only be used once per tuple pattern
  --> $DIR/rest-pat-semantic-disallowed.rs:38:9
   |
LL |         ..,
   |         -- previously used here
LL |         ..,
   |         ^^ can only be used once per tuple pattern

error: `..` can only be used once per tuple pattern
  --> $DIR/rest-pat-semantic-disallowed.rs:39:9
   |
LL |         ..,
   |         -- previously used here
LL |         ..,
LL |         ..
   |         ^^ can only be used once per tuple pattern

error: `..` can only be used once per tuple pattern
  --> $DIR/rest-pat-semantic-disallowed.rs:44:9
   |
LL |         ..,
   |         -- previously used here
LL |         x,
LL |         ..
   |         ^^ can only be used once per tuple pattern

error: `..` can only be used once per tuple struct pattern
  --> $DIR/rest-pat-semantic-disallowed.rs:54:9
   |
LL |         ..,
   |         -- previously used here
LL |         ..,
   |         ^^ can only be used once per tuple struct pattern

error: `..` can only be used once per tuple struct pattern
  --> $DIR/rest-pat-semantic-disallowed.rs:55:9
   |
LL |         ..,
   |         -- previously used here
LL |         ..,
LL |         ..
   |         ^^ can only be used once per tuple struct pattern

error: `..` can only be used once per tuple struct pattern
  --> $DIR/rest-pat-semantic-disallowed.rs:60:9
   |
LL |         ..,
   |         -- previously used here
LL |         x,
LL |         ..
   |         ^^ can only be used once per tuple struct pattern

error: `..` can only be used once per slice pattern
  --> $DIR/rest-pat-semantic-disallowed.rs:68:9
   |
LL |         ..,
   |         -- previously used here
LL |         ..,
   |         ^^ can only be used once per slice pattern

error: `..` can only be used once per slice pattern
  --> $DIR/rest-pat-semantic-disallowed.rs:69:9
   |
LL |         ..,
   |         -- previously used here
LL |         ..,
LL |         ..
   |         ^^ can only be used once per slice pattern

error: `..` can only be used once per slice pattern
  --> $DIR/rest-pat-semantic-disallowed.rs:73:17
   |
LL |         ..,
   |         -- previously used here
LL |         ref x @ ..,
   |                 ^^ can only be used once per slice pattern

error: `..` can only be used once per slice pattern
  --> $DIR/rest-pat-semantic-disallowed.rs:74:21
   |
LL |         ..,
   |         -- previously used here
LL |         ref x @ ..,
LL |         ref mut y @ ..,
   |                     ^^ can only be used once per slice pattern

error: `..` patterns are not allowed here
  --> $DIR/rest-pat-semantic-disallowed.rs:75:18
   |
LL |         (ref z @ ..),
   |                  ^^
   |
   = note: only allowed in tuple, tuple struct, and slice patterns

error: `..` can only be used once per slice pattern
  --> $DIR/rest-pat-semantic-disallowed.rs:76:9
   |
LL |         ..,
   |         -- previously used here
...
LL |         ..
   |         ^^ can only be used once per slice pattern

error: `..` patterns are not allowed here
  --> $DIR/rest-pat-semantic-disallowed.rs:15:12
   |
LL |     fn foo(..: u8) {}
   |            ^^
   |
   = note: only allowed in tuple, tuple struct, and slice patterns

error[E0282]: type annotations needed
  --> $DIR/rest-pat-semantic-disallowed.rs:28:9
   |
LL |     let x @ ..;
   |         ^^^^^^
   |
help: consider giving this pattern a type
   |
LL |     let x @ ..: /* Type */;
   |               ++++++++++++

error: aborting due to 22 previous errors

For more information about this error, try `rustc --explain E0282`.
